package de.tum.in.localcampuscommentsextension.Registry.Registry;

public class Registry {
 //   public static Class<? extends ShowPostFragment> showPostFragmentClass = TestShowFragment.class;
 //   public static Class<? extends AddPostFragment> addPostFragmentClass = TestAddFragment.class;
    public static String typeId = "ee5afd62-6e72-4728-8404-e91d7ea2c303";
    public static String typeDescription = "Comments Extension";
}
