package de.tum.localcampuslib;

/**
    This is the only interface an AddPostFragment is expected to use for interacting withdata.
 */
public interface AddPostDataProvider {
    public void addPost(String data);
}
